--- a/DDPTP/static/css/demo_index.css
+++ b/DDPTP/static/css/demo_index.css
@@ -1,6 +1,14 @@
 .card{
-    min-height: 265px;
+    height: 265px;
     animation: fadein 1.2s;
+}
+
+#step4{
+    height: 300px;
+}
+
+#step5{
+    height: 300px;
 }
 
 .step{
