--- a/DDPTP/static/css/home.css
+++ b/DDPTP/static/css/home.css
@@ -3,6 +3,10 @@
     margin-bottom: 60px;
 }
 
+#description {
+    font-size: 18px;
+}
+
 .feature {
     border: 2px solid lightgray;
     border-radius: 2%;
