--- a/DDPTP/templates/base.html
+++ b/DDPTP/templates/base.html
@@ -16,5 +16,10 @@
         <br>
         <br>
         <br>
+        <footer class="footer">
+            <div class="container">
+                <p class="text-muted">Author: Zhuolun Li<br>Email: lizhuolun199904@gmail.com</p>
+            </div>
+        </footer>
     </body>
 </html>
