--- a/DDPTP/templates/home.html
+++ b/DDPTP/templates/home.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="text-center" id="title">
         <h1>The Digital Discrimination Prevention Model</h1>
-        <h5 class="mt-5">Author: Zhuolun Li</h5>
+        <p id="description" class="mt-5 text-muted">The model is proposed to prevent discrimination and protect privacy.<br> The model is a carefully designed and tested process for organizations to follow,<br> in the context that organizations use algorithms to classify individuals.</p>
     </div>
 
     <div class="row text-center">
