--- a/DDPTP/static/css/common.css
+++ b/DDPTP/static/css/common.css
@@ -11,3 +11,12 @@
     from { opacity: 0; }
     to   { opacity: 1; }
 }
+
+.footer {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 5px;
+    bottom: 0;
+    width: 100%; 
+    background-color: #f5f5f5;
+  }
