--- a/DDPTP/templates/submission.html
+++ b/DDPTP/templates/submission.html
@@ -6,6 +6,8 @@
     <h1>{{ texts.title }}</h1>
     <br>
     <p>{{ texts.description }}</p>
+    <p>You can check how the algorithm that the organization use performs through <a href="verification">the algorithm status</a>.</p>
+    <br>
     <form method="POST" action="index"> {% csrf_token %}
         {{form.as_p}}
         <input type="hidden" value="{{accept_return}}" name="accept_return"/>
