update discriptive texts

--- a/DDPTP/templates/about.html
+++ b/DDPTP/templates/about.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="title">
-        <h1>About the Model</h1>
+        <h1>About the Project</h1>
     </div>
     <p>
         Discrimination was an issue among humans before the invention of artificial intelligence. However, the rapid development and increasing use of artificial intelligence has raised this concern to algorithms. Algorithms, particularly machine learning algorithms, have involved in or replaced the human’s decision-making process in some scenarios, for example, trading, diagnosing and driving. While this is bringing huge benefit to society, some of the decision-making algorithms are discriminating against certain groups of people. This type of discrimination is called digital discrimination. At present, this is likely to take place when organizations use algorithms to make decisions on individuals. For example, algorithms are helping to decide whether organizations should hire a person. 
