--- a/DDPTP/templates/demo_index.html
+++ b/DDPTP/templates/demo_index.html
@@ -7,7 +7,8 @@
     <div class="title">
         <h1> Demo </h1>
     </div>
-    <h2 style="margin-bottom: 30px;">The DDP App Demo Pages</h2>
+    <h2 style="margin-bottom: 20px;">The DDP App Demo Pages</h2>
+    <p style="margin-bottom: 20px;">The model requires involvement of a third-party application. The app interacts with organizations and individuals to help to prevent discrimination and protect privacy. Here are some demo pages of the app.</p>
     <div class="row text-center">
         <div class="col-3">
             <div class="card">
