--- a/DDPTP/templates/verification.html
+++ b/DDPTP/templates/verification.html
@@ -5,6 +5,14 @@
     <div class="title">
         <h1>Algorithm Status</h1>
         <h5>The algorithm is doing well. No discrimination is discovered.</h5>
+        <br>
+        <h4>Metrics information</h4>
+        <p class="text-muted">
+            <b>1. Statistical Parity Difference</b>: Computed as the difference of the rate of favorable outcomes received by the unprivileged group to the privileged group. The ideal value is 0, the acceptable range is -0.1 to 1.<br>
+            <b>2. Equal Opportunity Difference</b>: The difference of true positive rates between the unprivileged and the privileged groups. The ideal value is 0, the acceptable range is -0.1 to 1.<br>
+            <b>3. Average Odds Difference</b>: Computed as average difference of false positive rate (false positives / negatives) and true positive rate (true positives / positives) between unprivileged and privileged groups. The ideal value is 0, the acceptable range is -0.1 to 1.<br>
+            <b>4. Disparate Impact</b>: Computed as average difference of false positive rate (false positives / negatives) and true positive rate (true positives / positives) between unprivileged and privileged groups. The ideal value is 1, the acceptable range is 0.8 to 1.25.
+        </p>
     </div>
     <div id="metrics">
         <b>Metrics of sex:</b>
