--- a/DDPTP/templates/base.html
+++ b/DDPTP/templates/base.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="{% static '/css/common.css' %}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
     </head>
 
     <body>
