update demo index card height

--- a/DDPTP/static/css/demo_index.css
+++ b/DDPTP/static/css/demo_index.css
@@ -1,14 +1,14 @@
 .card{
-    height: 265px;
+    min-height: 265px;
     animation: fadein 1.2s;
 }
 
 #step4{
-    height: 300px;
+    min-height: 350px;
 }
 
 #step5{
-    height: 300px;
+    min-height: 350px;
 }
 
 .step{
