--- a/DDPTP/templates/demo_index.html
+++ b/DDPTP/templates/demo_index.html
@@ -8,7 +8,7 @@
         <h1> Demo </h1>
     </div>
     <h2 style="margin-bottom: 20px;">The DDP App Demo Pages</h2>
-    <p style="margin-bottom: 20px;">The model requires involvement of a third-party application. The app interacts with organizations and individuals to help to prevent discrimination and protect privacy. Here are some demo pages of the app.</p>
+    <p style="margin-bottom: 20px;">The workflow requires involvement of a third-party application called the DDP app. The app interacts with organizations and individuals to help to prevent discrimination and protect privacy. Here are some demo pages of the app.</p>
     <div class="row text-center">
         <div class="col-3">
             <div class="card">
@@ -50,6 +50,9 @@
     </div>
 
     <h2 style="margin-top: 30px; margin-bottom: 30px;">Process demonstration</h2>
+    <p style="margin-bottom: 50px;">
+        Try the workflow interactively. Here is an example use case with the <a href="https://archive.ics.uci.edu/ml/datasets/statlog+(german+credit+data)">Statlog (German Credit Data) Data Set</a>.
+    </p>
     <div class="row">
         <div class="col-md-4">
             <h3 class="text-center">Organization</h3>
