--- a/DDPTP/templates/home.html
+++ b/DDPTP/templates/home.html
@@ -6,8 +6,8 @@
 
 <div class="container">
     <div class="text-center" id="title">
-        <h1>The Digital Discrimination Prevention Model</h1>
-        <p id="description" class="mt-5 text-muted">The model is proposed to prevent discrimination and protect privacy.<br> The model is a carefully designed and tested process for organizations to follow,<br> in the context that organizations use algorithms to classify individuals.</p>
+        <h1>A Privacy-Aware Discrimination Prevention Workflow</h1>
+        <p id="description" class="mt-5 text-muted">The workflow is proposed to prevent discrimination and protect privacy.<br> It is a carefully designed and tested process for organizations and individuals to follow,<br> in the context that organizations use algorithms to classify individuals.</p>
     </div>
 
     <div class="row text-center">
@@ -46,7 +46,7 @@
             <div class="card">
             <div class="card-body">
                 <h5 class="card-title">See Demo</h5>
-                <p class="card-text">Navigate how the model works with an example. Play with each processes and see how individuals and organizations act in the model.</p>
+                <p class="card-text">Navigate how the workflow works with an example. Play with each processes and see how individuals and organizations act in the workflow.</p>
                 <a href="demo/index" class="btn btn-primary">Go to demo</a>
             </div>
             </div>
@@ -55,7 +55,7 @@
             <div class="card">
             <div class="card-body">
                 <h5 class="card-title">See Experiments</h5>
-                <p class="card-text">View experiments and findings about the model, understand why the model is effective. Even run your own experiments to see how it goes.</p>
+                <p class="card-text">View experiments and findings about the workflow, understand why the workflow is effective. Even run your own experiments to see how it goes.</p>
                 <a href="experiments" class="btn btn-primary">Go to experiments</a>
             </div>
             </div>
