--- a/DDPTP/templates/base.html
+++ b/DDPTP/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>The Discrimination Free Workflow</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static '/css/common.css' %}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
